--- a/src/AzureDemo.WebApi/AzureDemo.WebApi.csproj
+++ b/src/AzureDemo.WebApi/AzureDemo.WebApi.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.54.0" />
+    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.54.0.2414" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
