--- a/src/AzureDemo.WebApi/AzureDemo.WebApi.csproj
+++ b/src/AzureDemo.WebApi/AzureDemo.WebApi.csproj
@@ -1,17 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <UserSecretsId>1e3ecd12-b768-4d21-a7c8-b18e92a65357</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.54.0" />
-    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.54.0.2414" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-  </ItemGroup>
 
 </Project>
