--- a/src/AzureDemo.WebApi/AzureDemo.WebApi.csproj
+++ b/src/AzureDemo.WebApi/AzureDemo.WebApi.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.54.0" />
+    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.54.0.2414" />
+  </ItemGroup>
+
 </Project>
