--- a/src/AzureDemo.Functions/appssettings.json
+++ b/src/AzureDemo.Functions/appssettings.json
@@ -1,10 +1,8 @@
 {
-  "exclude": [
-    "**/bin",
-    "**/bower_components",
-    "**/jspm_packages",
-    "**/node_modules",
-    "**/obj",
-    "**/platforms"
-  ]
+  "YouTube": {
+    "Key": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "Username": ""
+  }
 }
