--- a/src/AzureDemo.WebApi/appsettings.json
+++ b/src/AzureDemo.WebApi/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "YouTube": {
+    "Key": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "Username": ""
+  }
 }
