Made QueueToServicebus to async

--- a/src/AzureDemo.Functions/AzureDemo.Functions.csproj
+++ b/src/AzureDemo.Functions/AzureDemo.Functions.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>38b71579-28fe-468e-9668-ceec1098c9a6</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.2.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="4.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.18" />
