--- a/src/AzureDemo.Infrastructure/AzureDemo.Infrastructure.csproj
+++ b/src/AzureDemo.Infrastructure/AzureDemo.Infrastructure.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.18" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.18" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.18" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AzureDemo.Application\AzureDemo.Application.csproj" />
+  </ItemGroup>
+
 </Project>
